cilium-networkpolicies/velero-networkpolicies/netpol-velero-common.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-velero-common
  namespace: velero
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
