cilium-networkpolicies/velero-networkpolicies/netpol-velero-crds.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-velero-crds
  namespace: velero
spec:
  endpointSelector:
    matchLabels:
      job-name: velero-upgrade-crds
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
