cilium-networkpolicies/velero-networkpolicies/netpol-velero-ui.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-velero-ui
  namespace: velero
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: velero-ui
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
